# dftool

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
config/: loot-types.json
config/maps/: zero-dam.json
docs/superpowers/plans/: 2026-06-30-delta-force-map-marker.md
docs/superpowers/specs/: 2026-06-30-delta-force-map-marker-design.md
public/config/maps/: zero-dam.json
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config_io.rs  main.rs
src/components/: ControlApp.tsx  GlobalShortcuts.tsx  LootTypeFilters.tsx  MapSelector.tsx  MarkerDetails.tsx  MarkerEditDialog.tsx  MarkerLayer.tsx  ModeControls.tsx  OverlayApp.tsx  OverlayInteractivityController.tsx
src/domain/: configValidation.test.ts  configValidation.ts  mapSelection.ts  markerEditing.test.ts  markerEditing.ts  markerPosition.test.ts  markerPosition.ts  overlayHitTesting.test.ts  overlayHitTesting.ts  resourcePaths.test.ts  resourcePaths.ts  schemas.ts
src/services/: configStore.ts  tauriApi.ts
src/state/: appStore.ts
src/test/: fixtures.ts
